Init timeout flag in ResourceErrorMac https://bugs.webkit.org/show_bug.cgi?id=99478

Reviewed by Alexey Proskuryakov.

On construction from platform error types, initialize the timeout flag
to true if the error results from a timeout.

No new tests, covered by tests that will be added in bug 74802.

* platform/network/mac/ResourceErrorMac.mm:
(WebCore::ResourceError::platformLazyInit): Initializing timeout flag if the error was a timeout.


git-svn-id: svn://svn.chromium.org/blink/trunk@131499 bbb929c8-8fbe-4397-9dbb-9b2b20218538