third_party/WebKit/Source/WebCore/platform/network/mac/ResourceErrorMac.mm
@@ -96,6 +96,8 @@ ResourceError::ResourceError(NSError *nsError)
     , m_platformError(nsError)
 {
     m_isNull = !nsError;
+    if (!m_isNull)
+        m_isTimeout = [m_platformError.get() code] == NSURLErrorTimedOut;
 }
 
 ResourceError::ResourceError(CFErrorRef cfError)
@@ -103,6 +105,8 @@ ResourceError::ResourceError(CFErrorRef cfError)
     , m_platformError((NSError *)cfError)
 {
     m_isNull = !cfError;
+    if (!m_isNull)
+        m_isTimeout = [m_platformError.get() code] == NSURLErrorTimedOut;
 }
 
 void ResourceError::platformLazyInit()
